<resources>
    <string name="app_name">OpenWeather App</string>
    <string name="Cityname">CityName</string>
    <string name="CurrentDate">CurrentDate</string>
    <string name="Temp">Temperature</string>
    <string name="Tempbelow">FeelLike</string>
    <string name="CloudInfo">CloudInfo</string>
    <string name="AirInfo">AirInfo</string>
    <string name="Humidity">Humidity: 51</string>
    <string name="UVIndex">UVIndex</string>
    <string name="Visibilty">Visibilty</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="invalid_loc">Not a valid location</string>
    <string name="dailog_text">For US locations, Enter as \'city\' or \'city, state \n\nFor International locations, Enter as \'city, country\'</string>
    <string name="api_key">a6eec40c77619091283402a914e04953</string>
</resources>
