<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/FirstContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cityname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/backBlue"
                    android:text="@string/Cityname"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/currentDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/backBlue"
                    android:text="@string/CurrentDate"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/SecondContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/FirstContainer"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/SecondContainerInner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_6sdp">

                    <TextView
                        android:id="@+id/Temprature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Temp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_32sdp" />

                    <TextView
                        android:id="@+id/FeelLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Tempbelow"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_22sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true">

                    <ImageView
                        android:id="@+id/weathericon"
                        android:layout_width="@dimen/_122sdp"
                        android:layout_height="@dimen/_122sdp"
                        android:src="@drawable/_02d"

                        tools:ignore="ContentDescription" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ThirdContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/SecondContainer"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/weatherDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CloudInfo"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"

                    />

                <TextView
                    android:id="@+id/Winds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AirInfo"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"

                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/FourthContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ThirdContainer"
                android:padding="@dimen/_6sdp">

                <TextView
                    android:id="@+id/Humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Humidity"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/FifthContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/FourthContainer"
                android:orientation="horizontal"
                android:padding="@dimen/_7sdp">

                <TextView
                    android:id="@+id/UvIndex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UvIndex"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"

                    />

                <TextView
                    android:id="@+id/Visibilty"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="Visibilty"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"

                    />

            </RelativeLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/SixContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/FifthContainer"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/morningtemprature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="160F"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_25sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/daytimeTemp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/daytimeTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="160F"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_25sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/eveningTemprature"
                    app:layout_constraintStart_toEndOf="@+id/morningtemprature"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/eveningTemprature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="160F"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_25sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/NightTemprature"
                    app:layout_constraintStart_toEndOf="@+id/daytimeTemp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/NightTemprature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="160F"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_25sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/eveningTemprature"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:id="@+id/SevenContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/SixContainer"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/HourlyWeatherRecylerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_26sdp"
                android:background="@drawable/bg"
                android:layout_below="@id/SevenContainer"
                android:padding="@dimen/_6sdp"
                >

                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Surnrise"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />
                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Surnset"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
/>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>